# gr-dvbs2acm

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_pptx.py  dqn_acm_model.pt  snr_predictor.pt
docs/: ARCHITECTURE.md  RESEARCH_SYNTHESIS.md  conference_paper.tex  presentation.tex  references.bib  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  results_presentation.tex
examples/: acm_loopback.grc  acm_loopback.py  acm_loopback_sim.py  evaluate.py  modcod_performance_analysis.py  run_acm.sh  train_dqn.py  train_dqn_colab.ipynb
examples/plots/: modcod_table.tex
examples/results/: ablation_results.json  latency_benchmark.json  multiseed_results.json
grc/: CMakeLists.txt  dvbs2acm_acm_controller.block.yml  dvbs2acm_acm_feedback.block.yml  dvbs2acm_bb_framer_acm.block.yml  dvbs2acm_demodulator_acm.block.yml  dvbs2acm_fec_decoder_acm.block.yml  dvbs2acm_fec_encoder_acm.block.yml  dvbs2acm_leo_channel.block.yml  dvbs2acm_modulator_acm.block.yml  dvbs2acm_orbit_visualizer.block.yml  dvbs2acm_pl_framer_acm.block.yml  dvbs2acm_pl_sync_acm.block.yml  dvbs2acm_snr_estimator.block.yml
include/gnuradio/dvbs2acm/: acm_controller.h  acm_feedback.h  api.h  bb_framer_acm.h  demodulator_acm.h  fec_decoder_acm.h  fec_encoder_acm.h  modcod_config.h  modulator_acm.h  pl_framer_acm.h  pl_sync_acm.h  snr_estimator.h
lib/: CMakeLists.txt  acm_controller_impl.cc  acm_controller_impl.h  bb_framer_acm_impl.cc  bb_framer_acm_impl.h  ldpc_tables.h  snr_estimator_impl.cc  snr_estimator_impl.h
python/: CMakeLists.txt
python/dvbs2acm/: __init__.py  acm_controller_ai.py  acm_controller_py.py  acm_feedback_py.py  bb_framer_acm_py.py  demodulator_acm_py.py  fec_decoder_acm_py.py  fec_encoder_acm_py.py  leo_channel_gr_py.py  leo_channel_model.py  modcod_table.py  modulator_acm_py.py  orbit_visualizer_py.py  pl_framer_acm_py.py  pl_sync_acm_py.py  snr_estimator_py.py
